my profile page

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 .container {
-  width: 100%;   /* This sets the width */
+  width: 100%;   /* This sets the width :) */
   margin: 0 auto; /* This automatically sets left/right margins */
 }
 
